# -

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  FINAL_REPORT.md  INSTRUKCIYA.md  MANUAL_TESTING.md  README.md  SECURITY.md  TASK.md  TESTING.md  eslint.config.mjs  package-lock.json  package.json  render.yaml  start-local-only.bat  start.bat
.github/workflows/: bootstrap.yml  ci.yml  deploy-pages.yml
desktop-client/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop-client/src/: App.tsx  styles.css  vite-env.d.ts
desktop-client/src-tauri/: Cargo.toml  tauri.conf.json
desktop-client/src-tauri/capabilities/: default.json
desktop-client/src-tauri/src/: main.rs
desktop-client/src/components/: ChatPanel.tsx  ControlPanel.tsx  DesktopSetup.tsx  DiagnosticsPanel.tsx  DrawingCanvas.tsx  MicrophoneControls.tsx  ParticipantList.tsx  PresetSelector.tsx  QualitySelector.tsx  RemoteAudioSink.tsx  RemoteControlSurface.tsx  RoomHeader.tsx  RoomJoin.tsx  ScreenStage.tsx  (+1 more)
desktop-client/test/: audio-level.test.ts  control-state.test.ts  drawing-state.test.ts  media-sync.test.ts  room-link.test.ts  signaling-client.test.ts  webrtc-state.test.ts
e2e/: browser-flow.test.mjs
scripts/: dev.mjs  diagnostics.mjs
shared/: protocol.ts  types.ts
signaling-server/: package-lock.json  package.json  test-client.mjs  tsconfig.json
signaling-server/src/: rooms.ts  server.ts  types.ts
signaling-server/test/: protocol.test.ts  rooms.test.ts  server.integration.test.ts
(+11 files in other folders)
